[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"
description = "This is a solver for Advent of Code 2022 tasks."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
clap = { version = "4.0.29", features = ["derive"] }
gifski = "1.8.1"
imgref = "1.9.4"
indicatif = "0.17.2"
itertools = "0.10.5"
ndarray = "0.15.6"
nom = "7.1.1"
rgb = "0.8.34"
thiserror = "1.0.37"
webp-animation = "0.7.0"
